# perfaware-homework

./: .gitignore  .scalafmt.conf  build.sbt
src-rs/: Cargo.toml
src-rs/src/: coordinates_generator.rs  coordinates_processor.rs  cpu_timer_guessed_main.rs  cpu_timer_main.rs  generator_main.rs  haversine_distance.rs  lib.rs  os_timer_main.rs  platform_metrics.rs  processor_main.rs
src/main/scala/bar/simon/perfaware/part1/: Instruction.scala  InstructionApplication.scala  InstructionDecoder.scala  Main.scala  Operand.scala  Register.scala  RegisterSimulation.scala
src/main/scala/bar/simon/perfaware/part2/: CPUTimer.scala  GeneratorMain.scala  HaversineCoordinatesGenerator.scala  HaversineDistance.scala  HaversineDistanceProcessor.scala  PointPair.scala  ProcessorMain.scala
src/test/resources/bar/simon/perfaware/part1/hw2/: listing_0039_more_movs.asm
src/test/resources/bar/simon/perfaware/part1/hw3/: listing_0041_add_sub_cmp_jnz.asm
src/test/resources/bar/simon/perfaware/part1/hw4/: listing_0043_immediate_movs.asm  listing_0043_immediate_movs.txt  listing_0044_register_movs.asm  listing_0044_register_movs.txt
src/test/resources/bar/simon/perfaware/part1/hw5/: listing_0046_add_sub_cmp.txt
src/test/resources/bar/simon/perfaware/part1/hw6/: listing_0048_ip_register.txt  listing_0049_conditional_jumps.txt
src/test/scala/bar/simon/perfaware/part1/: InstructionDecoderTest.scala
