[package]
name = "perfaware-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.2.51"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rand = "0.9.2"
rand_pcg = "0.9.0"

[[bin]]
name = "generator_main"
path = "src/generator_main.rs"

[[bin]]
name = "processor_main"
path = "src/processor_main.rs"

[[bin]]
name = "os_timer_main"
path = "src/os_timer_main.rs"

[[bin]]
name = "cpu_timer_main"
path = "src/cpu_timer_main.rs"

[[bin]]
name = "cpu_timer_guessed_main"
path = "src/cpu_timer_guessed_main.rs"
